# poker

./: LICENSE  README.md
client/: Cargo.toml
client/assets/: spade1.glb  spade2.glb
client/src/: asset_loader.rs  assets.rs  background_animation.rs  button_manager.rs  game.rs  main.rs  main_menu.rs  server.rs  settings.rs  state.rs
client/src/animations/: animator.rs  background.rs  mod.rs
client/src/screens/: join_server.rs  loading.rs  lobby.rs  main_menu.rs  mod.rs  server_select.rs  settings.rs
client/src/utils/: client.rs  deck.rs  lobby.rs  message.rs  mod.rs  server.rs
server/src/: deck.rs  main.rs  server.rs
test/src/: main.rs
