[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2"
poker = "0.6.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
