[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15.2", features = ["jpeg", "png"] }
cards = "1.1.2"
pokereval = "0.1.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
