[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15.2", features = ["jpeg", "png"] }
bevy_simple_text_input = "0.10.2"
cards = "1.1.2"
pokereval = "0.1.2"
rand = "0.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
#serde = { version = "1.0", features = ["derive"] }
#tokio = { version = "1.0", features = ["full"] }
#url = "2.5.0"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
